--- a/README
+++ b/README
@@ -3,3 +3,6 @@ Re-Configurable Hardware
 
 A collection of different tools, scripts and documentation on reconfigurable hardware (FPGAs).
 
+ - vhdlparse: parse vhdl entities and generate a wrapper for use with xps
+ - util: some utilities for working with embedded systems on Xilinx FPGAs
+ - icap-writer: modified "bitinfo" project to write bitstreams headerless to /dev/icap
