- adding more modules: dsrc, audio interface

--- a/README
+++ b/README
@@ -3,6 +3,9 @@ Re-Configurable Hardware
 
 A collection of different tools, scripts and documentation on reconfigurable hardware (FPGAs).
 
+ - genmake: generate makefiles for using the Xilinx toolchain to synthesise
+	single modules
  - vhdlparse: parse vhdl entities and generate a wrapper for use with xps
  - util: some utilities for working with embedded systems on Xilinx FPGAs
  - icap-writer: modified "bitinfo" project to write bitstreams headerless to /dev/icap
+ - modules: HDL sources for module implementations
